--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ filelock==3.14.0
 fire==0.6.0
 frozenlist==1.4.1
 fsspec==2024.3.1
+google-cloud-compute==1.18.0
 gitdb==4.0.11
 gitpython==3.1.43
 hjson==3.1.0
