--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
 bitsandbytes==0.43.1
+blinker==1.8.1
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -24,17 +25,19 @@ exceptiongroup==1.2.1
 executing==2.0.1
 filelock==3.14.0
 fire==0.6.0
+flask==3.0.3
 frozenlist==1.4.1
 fsspec==2024.3.1
-google-cloud-compute==1.18.0
 gitdb==4.0.11
 gitpython==3.1.43
+google-cloud-compute==1.18.0
 hjson==3.1.0
 huggingface-hub==0.22.2
 idna==3.7
 install==1.3.5
 ipykernel==6.29.4
 ipython==8.24.0
+itsdangerous==2.2.0
 jedi==0.19.1
 jinja2==3.1.3
 jupyter-client==8.6.1
@@ -112,6 +115,7 @@ tzdata==2024.1
 urllib3==2.2.1
 wandb==0.16.6
 wcwidth==0.2.13
+werkzeug==3.0.3
 wrapt==1.16.0
 xxhash==3.4.1
 yarl==1.9.4
